# prad2viewer

./: .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  README.md  REPLAYED_DATA.md
analysis/cuts/: prad2_default.json
analysis/include/: ConfigSetup.h  MatchingTools.h  PhysicsTools.h  Replay.h  gain_factor.h
analysis/pyscripts/: _common.py  _pulse_template_db.py  apply_pulse_template.py  deconv_pileup_demo.py  fit_pulse_template.py  gem_eff_audit.py  gem_hycal_matching.py  plot_hits_at_hycal.py
analysis/scripts/: cosmic_eq_analyze.py  cosmic_eq_common.py  cosmic_eq_distribution.py  cosmic_eq_patch_hv.py  cosmic_eq_propose.py  gain_eq_analyze.py  gain_eq_common.py  gain_eq_distribution.py  gain_eq_propose.py  gem_clusters_to_root.C  gem_hycal_matching.C  lms_alpha_normalize.C  plot_hits_at_hycal.C  rf_time_example.C  rootlogon.C  script_helpers.h  tagger_hycal_correlation.C
analysis/src/: MatchingTools.cpp  PhysicsTools.cpp  Replay.cpp
analysis/tools/: analysis_example.cpp  cosmic_lg.cpp  cosmic_test.cpp  det_calib.cpp  epCalib.cpp  epCalib_m.cpp  gain_monitor.cpp  gain_replay.cpp  gama_calib.cpp  gamma_calib.cpp  live_charge.cpp  matching.cpp  quick_check.cpp  replay_filter.cpp  replay_hycalRecon.cpp  replay_rawdata.cpp  replay_rawdata_m.cpp  replay_recon.cpp  replay_recon_m.cpp  sim2replay.cpp
calibration/: README.md  gain_scanner.py  hycal_gain_equalizer.py  hycal_snake_scan.py  scan_engine.py  scan_geoview.py  scan_path_editor.py  scan_utils.py
database/: config.json  daq_config.json  daq_map.json  gem_map.json  hist_config.json  hycal_map.json  monitor_config.json  online_config.json  reconstruction.json  reconstruction_config.json  trigger_bits.json
database/calibration/: adc_to_mev_factors_cosmic.json  calibration_config.json  calibration_factor_0_1.json  calibration_factor_2_0.json
database/calibration/Physics_calib/23899/: CalibResult_iter1.root  CalibResult_iter2.root  CalibResult_iter3.root  CalibResult_iter4.root  CalibResult_iter5.root  CalibResult_iter6.root  calib_iter1.json  calib_iter2.json  calib_iter3.json  calib_iter4.json  calib_iter5.json
database/daq_cnf/: adchycal_gain_v2.cnf  adchycal_gain_v3.cnf  peaking_time_fit.json
database/gem_peds/: cm_23867.txt  cm_24177.txt  peds_23867.txt  peds_24177.txt
database/history/: daq_map_20260330_before_remapping.json
database/prad1/: prad_config.json  prad_daq_config.json  prad_hycal_map.json  prad_monitor_config.json
database/runinfo/: 2p1_general.json
database/waveform/: pulse_templates_024177.json  pulse_templates_024194.json
docs/: API.md  CodaEventDecoder.java  Composite_data_description.txt  FADCPulseCompressionDescription_1.docx  PRAD2ANA_API.md  PRAD2DEC_API.md  PRAD2DET_API.md  REPLAYED_DATA.md  SERVER_API.md  fadc_compress_example.xlsx
docs/clas_fadc/: FADC250_algorithms.md  _manual.txt  fadc250_modes.py  plot_modes.py  test_fadc250.py
docs/prad2dec/: plot_wave_analysis.py  wave_analysis.md  wave_analysis.wiki
docs/prad2det/: gem_clustering.md  hycal_clustering.md  plot_gem_clustering.py  plot_hycal_clustering.py
docs/rols/: banktags.md  prad_v0.trg
docs/technical_notes/: README.md
docs/technical_notes/gem_clustering/: gem_clustering.md
docs/technical_notes/gem_clustering/scripts/: plot_gem_clustering.py
docs/technical_notes/hycal_clustering/: hycal_clustering.md
docs/technical_notes/waveform_analysis/: wave_analysis.md
gem/: README.md  check_strip_map.py  gem_cluster_view.py  gem_dump.cpp  gem_event_viewer.py  gem_layout.py  gem_strip_map.py  gem_view.py
include/: EvChannel.h  EvStruct.h  Fadc250Data.h  Fadc250Decoder.h
prad2ana/: CMakeLists.txt
prad2ana/include/: EpicsStore.h  GemCluster.h  GemSystem.h  HyCalCluster.h  HyCalSystem.h  Physics_anaTools.h
prad2ana/src/: EpicsStore.cpp  GemCluster.cpp  GemSystem.cpp  HyCalCluster.cpp  HyCalSystem.cpp  Physics_anaTools.cpp
prad2dec/: CMakeLists.txt  README.md
prad2dec/include/: DaqConfig.h  EvChannel.h  Fadc250Data.h  Fadc250FwAnalyzer.h  PulseTemplateStore.h  SyncData.h  TdcData.h  TdcDecoder.h  WaveAnalyzer.h  load_daq_config.h  replay.h
prad2dec/src/: EtChannel.cpp  EvChannel.cpp  Fadc250FwAnalyzer.cpp  PulseTemplateStore.cpp  TdcDecoder.cpp  WaveAnalyzer.cpp  replay.cpp
prad2dec/test/: test_fadc_fw.cpp
prad2det/: CMakeLists.txt  README.md
prad2det/include/: DetectorTransform.h  EventData.h  EventData_io.h  GemCluster.h  GemSystem.h  HyCalCluster.h  HyCalSystem.h  RunInfoConfig.h  TrackGeometry.h  TrackMatcher.h
prad2det/src/: GemSystem.cpp  HyCalCluster.cpp  HyCalSystem.cpp  TrackGeometry.cpp  TrackMatcher.cpp
prad2det/test/: test_track_matcher.cpp
python/: bind_dec.cpp  bind_det.cpp  prad2py.cpp
resources/: cluster.js  config.js  cut_dialog.js  epics.js  gem.js  gem_apv.js  geo.js  lms.js  online.js  physics.js  report.js  viewer.css  viewer.html  viewer.js  waveform.js
scripts/: README.md  check_strip_map.py  coincidence_monitor.py  ep_calib_viewer.py  gem_hycal_match_viewer.py  gem_layout.py  gem_strip_map.py  hycal_event_viewer.py  hycal_gain_monitor.py  hycal_geoview.py  hycal_map_builder.py  hycal_pedestal_monitor.py  hycal_scaler_map.py  tagger_viewer.py  tdc_viewer.py  trigger_mask_editor.py  waveform_hist_viewer.py  waveform_viewer.py
scripts/daq_tool/: fadc_gain_config.py  trigger_mask_editor.py
scripts/dev_tool/: convert_gem_map.py  merge_hycal_map.py  post_elog.py
scripts/shell/: start_prad2mon
src/: EvChannel.cpp  Fadc250Decoder.cpp  app_state.cpp  app_state.h  app_state_api.cpp  app_state_filter.cpp  app_state_init.cpp  data_source.h  evc_monitor.cpp  evc_viewer.cpp  evio_data_source.cpp  evio_data_source.h  http_compress.h  load_daq_config.h  prad2_client.cpp  prad2_server.cpp  prad2evviewer.cpp  root_data_source.cpp  root_data_source.h  viewer_server.cpp  viewer_server.h  viewer_server_et.cpp  viewer_server_http.cpp  viewer_utils.h
test/: README.md  evchan_test.cpp  evio_dump.cpp  gem_dump.cpp  livetime.cpp  replay_hycalRecon.cpp  replay_rawdata.cpp  test_main.cpp  ts_dump.cpp
(+2 files in other folders)
